# Librarian

./: .dockerignore  .env.aws.example  .env.development  .env.example  .env.local.example  .gitignore  20GB_MEMORY_DEPLOYMENT_SUCCESS.md  20gb-deployment-20260115_211813.json  8GB_MEMORY_DEPLOYMENT_SUCCESS.md  8gb-deployment-fixed-secrets-1768626840.json  8gb-deployment-no-secrets-1768627046.json  8gb-memory-reduction-1768620745.json  8gb-memory-reduction-1768622956.json  8gb-memory-reduction-1768623027.json  8gb-memory-update-1768625914.json  ABSOLUTE_MAXIMUM_COST_OPTIMIZATION_COMPLETE.md  ADDITIONAL_RESOURCE_CLEANUP_COMPLETE.md  AI_CHAT_IMPLEMENTATION_SUMMARY.md  AI_DEPLOYMENT_SUCCESS_SUMMARY.md  ALB_CONNECTIVITY_DIAGNOSIS_COMPLETE.md  ALB_CONNECTIVITY_FIX_SPEC_UPDATE_SUMMARY.md  ALB_CONNECTIVITY_INVESTIGATION_UPDATE.md  ALB_DNS_VERIFICATION_SUCCESS.md  ALB_HEALTH_CHECK_CONNECTIVITY_ANALYSIS.md  ALB_HEALTH_CHECK_DEBUGGING_SUMMARY.md  ALB_HEALTH_CHECK_FINAL_DIAGNOSIS.md  ALB_HEALTH_CHECK_PATH_UPDATE_GUIDE.md  ALB_POSTGRES_CONNECTIVITY_FIX_SUMMARY.md  ALB_SETUP_STATUS.md  ALB_USAGE_ANALYSIS_SUMMARY.md  ALB_V2_CREATION_SUCCESS.md  APPLICATION_CODE_BUG_FIX_SUMMARY.md  AVERAGE_USER_WAIT_TIME_30_SECONDS_VALIDATION.md  AWS_NATIVE_CLEANUP_COMPLETION_SUMMARY.md  AWS_NATIVE_CONFIG_RESTORATION.md  AWS_NATIVE_IMPLEMENTATION_CHECKPOINT.md  BASIC_API_30_SECOND_AVAILABILITY_VALIDATION.md  CACHE_PERFORMANCE_RELIABILITY_TESTING_SUMMARY.md  CACHE_STARTUP_TIME_REDUCTION_VALIDATION.md  CHAOS_ENGINEERING_IMPLEMENTATION_COMPLETION_SUMMARY.md  (+682 more)
backup/: current-docker-image-tag.txt  current-secrets-structure.json  working-deployment-process.md
config/: __init__.py  aws-config-basic.py  cleanup-config.json  deployment-config.json  dev-config-basic.py  service-discovery.yaml  staging-config-basic.py
database/: README.md  migrations_config.json  schema_config.json  schema_validator.py  schema_version_manager.py
docs/: README.md  backup-and-restore-guide.md  canonical-configuration-status.md  canonical-files-validation.md  chaos-engineering-guide.md  cold-start-optimization-guide.md  container-startup-optimization.md  cost-optimization-learning.md  data-import-export-guide.md  database-reset-cleanup-guide.md  deployment-analysis-2026-01-06.md  deployment-troubleshooting-guide.md  developer-onboarding-guide.md  development-workflow-performance-guide.md  docker-compose-performance-optimization-guide.md  environment-quick-reference.md  environment-setup-guide.md  final-validation-report.md  graceful-shutdown-guide.md  hot-reload-optimization-guide.md  local-development-configuration.md  local-development-hot-reload.md  local-development-memory-monitoring.md  local-development-migration-porting.md  local-development-performance-optimization-guide.md  local-development-performance-tuning-guide.md  local-development-performance.md  local-development-quick-reference.md  (+14 more)
(+1749 files in other folders)
